# amazon-bedrock-workshop

./: .gitignore  00-getting-started.ipynb  01-entity-extraction.ipynb  01-images-stablediffusion.ipynb  01-rag-setup.ipynb  02-agents.ipynb  02-multimodal-search-claude.ipynb  02-rag-build.ipynb  02-tools.ipynb  03-agent-insurance-claims.ipynb  03-rag-cleanup.ipynb  03a-rag-setup.ipynb  03a-tools.ipynb  03b-rag-run.ipynb  03c-agents-cleanup.ipynb  03c-rag-cleanup.ipynb  04-langchain-lcel-summary.ipynb  04-multimodal-search.ipynb  04a-finetuning-setup.ipynb  04a-rag-setup.ipynb  04b-finetuning-run.ipynb  04b-rag-run.ipynb  05-bedrock-agent.ipynb  05-bedrock-guardrails.ipynb  05-langchain-agent.ipynb  05-nemo-guardrails-security.ipynb  07-bedrock-guardrails.ipynb  CODE_OF_CONDUCT.ja.md  CONTRIBUTING.ja.md  README.ja.md  README.md  RELEASE_NOTES.md  buildspec.yaml  download-dependencies.sh  insurance_claims_agent_openapi_schema.json  lintspec.yaml  requirements.txt  utility.py
00_Intro/: README.ja.md  README.md  bedrock_boto3_setup.ipynb  bedrock_boto3_setup.ja.ipynb
00_Prerequisites/: Getting_started_with_Converse_API.ipynb  README.md  bedrock_basics.ipynb
01-text-and-code-generation/: 01-text-and-code-generation.ipynb  README.md
01-text-generation/: 01-text-generation.ipynb  README.md
01_Generation/: 00_generate_w_bedrock.ipynb  00_generate_w_bedrock.ja.ipynb  00_generate_w_bedrock_llama2.ipynb  01_zero_shot_generation.ipynb  01_zero_shot_generation.ja.ipynb  01_zero_shot_generation_llama2.ipynb  02_contextual_generation.ipynb  (+6 more)
tutor/agent/: main.py  pyproject.toml
(+534 files in other folders)
