[project]
name = "aws-strands-server"
version = "0.1.0"
description = "Amazon Bedrock Workshop interactive tutor agent"
authors = [{ name = "AWS Samples" }]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
  "ag-ui-protocol>=0.1.5",
  "fastapi>=0.115.12",
  "uvicorn>=0.34.3",
  "strands-agents[bedrock]>=1.15.0",
  "strands-agents-tools>=0.2.14",
  "ag_ui_strands~=0.1.0",
  "python-dotenv>=1.2.2",
  "openai>=1.0.0",
  "aws-bedrock-token-generator>=0.1.0",
  "mcp>=1.0.0",
]
